# skate

./: .gitignore  .gitmodules  404.html  Cargo.toml  README.md  book.toml  build.rs  cov.sh  cov.txt  ffi.html  fmt.sh  hello.sk  how.html  index.html  influences.html  justfile  literature.html  print.html  searchindex.js  searchindex.json  test.py  values.html  what.html  why.html
.cargo/: config.toml
.github/workflows/: ci.yml  site.yml
cmd/sdb/: Cargo.toml
cmd/sdb/src/: docs.rs  grid.rs  main.rs  term.rs
cmd/skate/: Cargo.toml
cmd/skate-treewalk/: Cargo.toml
cmd/skate-treewalk/src/: main.rs
cmd/skate/src/: main.rs
cmd/skatrace/: Cargo.toml
cmd/skatrace/src/: command.lalrpop  command.rs  main.rs  prefix_writer.rs
cmd/tmp/crun/: Cargo.toml
cmd/tmp/crun/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: bytecode.rs  lib.rs  utils.rs
crates/compiler/src/bytecode/: debug.rs  debug_impl.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs  span.rs
crates/parser/: Cargo.toml  build.rs
crates/parser/src/: grammar.lalrpop  grammar.rs  lib.rs
crates/rt_common/: Cargo.toml
crates/rt_common/src/: binop.rs  lib.rs
crates/treewalk/: Cargo.toml
crates/treewalk/src/: binop.rs  exec.rs  lib.rs  lvalue.rs  scope.rs  span_hack.rs  utils.rs
crates/value/: Cargo.toml
crates/value/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs  utils.rs
docs/: SUMMARY.md  book.toml  ffi.md  influences.md  literature.md  values.md  why.md
docs/src/: how.md  influences.md  values.md  what.md  why.md
playground/: Cargo.toml  README.md  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
playground/src/: lib.rs
playground/static/: index.html
scripts/: ci.sh  cov.sh  fmt.sh  site.sh  test.py
skate/compiler/src/: bytecode.rs
skate/rt_common/src/: lib.rs
skate/treewalk/: Cargo.toml
skate/treewalk/src/: lib.rs  lvalue.rs
skate/vm/src/: debug.rs  lib.rs  tests.rs  utils.rs
src/: ast.rs  ast_tests.rs  diagnostics.rs  env.rs  exec.rs  grammar.lalrpop  grammar.rs  lib.rs  main.rs  value.rs
src/exec/: binop.rs  lvalue.rs  mod.rs  span_hack.rs
src/snapshots/: skate__ast_tests__exprs-10.snap  skate__ast_tests__exprs-11.snap  skate__ast_tests__exprs-2.snap  skate__ast_tests__exprs-3.snap  skate__ast_tests__exprs-4.snap  skate__ast_tests__exprs-5.snap  skate__ast_tests__exprs-6.snap  skate__ast_tests__exprs-7.snap  skate__ast_tests__exprs-8.snap  skate__ast_tests__exprs-9.snap  skate__ast_tests__exprs.snap  skate__ast_tests__functions-10.snap  skate__ast_tests__functions-11.snap  skate__ast_tests__functions-12.snap  skate__ast_tests__functions-13.snap  skate__ast_tests__functions-14.snap  skate__ast_tests__functions-15.snap  skate__ast_tests__functions-16.snap  skate__ast_tests__functions-17.snap  skate__ast_tests__functions-18.snap  skate__ast_tests__functions-19.snap  skate__ast_tests__functions-2.snap  skate__ast_tests__functions-20.snap  skate__ast_tests__functions-21.snap  skate__ast_tests__functions-3.snap  skate__ast_tests__functions-4.snap  skate__ast_tests__functions-5.snap  skate__ast_tests__functions-6.snap  skate__ast_tests__functions-7.snap  skate__ast_tests__functions-8.snap  skate__ast_tests__functions-9.snap  skate__ast_tests__functions.snap  skate__ast_tests__items.snap  skate__ast_tests__progs-2.snap  skate__ast_tests__progs.snap  skate__ast_tests__stmt-2.snap  skate__ast_tests__stmt-3.snap  skate__ast_tests__stmt-4.snap  skate__ast_tests__stmt-5.snap  skate__ast_tests__stmt-6.snap  (+36 more)
tests/compile-fail/: if-precidence.sk  if-precidence.stderr
tests/compile-fail/lexer/: earlyeof.sk  earlyeof.stderr  no-arg-ty.sk  no-arg-ty.stderr  not-a-type.sk  not-a-type.stderr  random.stderr  return-arrow-no-ty.sk  return-arrow-no-ty.stderr  unrecognized.sk  unrecognized.stderr
tests/compile-fail/parser/: block-semi.sk  block-semi.stderr  reasign.sk  reasign.stderr
tests/run-fail/array/: array-oos.sk  array-oos.stderr  index-complex.sk  index-complex.stderr  index-not-array.sk  index-not-array.stderr  index-not-int.sk  index-not-int.stderr  index-oob.sk  index-oob.stderr  index-oos.sk  index-oos.stderr  lv-index-neg.sk  lv-index-neg.stderr  lv-index-not-int.sk  lv-index-not-int.stderr  lv-not-array.sk  lv-not-array.stderr  lvalue-oob.sk  lvalue-oob.stderr  negative-index.sk  negative-index.stderr  nested-eq.sk  nested-eq.stderr  no-op-nested.sk  no-op-nested.stderr  no-op.sk  no-op.stderr  not-array-rv.sk  not-array-rv.stderr  rv-lv-oos.sk  rv-lv-oos.stderr  rv-oob.sk  rv-oob.stderr  str-idx.sk  str-idx.stderr
tests/run-fail/binop/: err-on-rhs.sk  err-on-rhs.stderr
tests/run-fail/exit/: ret-float.sk  ret-float.stderr  ret-string.sk  ret-string.stderr
tests/run-fail/fns/: doesnt-exist.sk  doesnt-exist.stderr  dup-fn-long.sk  dup-fn-long.stderr  dup-fn.sk  dup-fn.stderr  not-a-fn.sk  not-a-fn.stderr  not-enough.sk  not-enough.stderr  return-fn.sk  return-fn.stderr  to-many-args.sk  to-many-args.stderr
tests/run-fail/lvalue/: not.sk  not.stderr
tests/run-fail/map/: dup-key.sk  dup-key.stderr  field-access-not-map.sk  field-access-not-map.stderr  lvalue-not-map.sk  lvalue-not-map.stderr  lvalue-oos.sk  lvalue-oos.stderr  no-key.sk  no-key.stderr  print.sk  print.stderr
tests/run-fail/types/: big_span.sk  big_span.stderr  if-bool.sk  if-bool.stderr  large-span.sk  large-span.stderr  negitive-str.sk  negitive-str.stderr  str-eq-array.sk  str-eq-array.stderr  str-plus-num.sk  str-plus-num.stderr
tests/run-fail/unop/: minus-str.sk  minus-str.stderr
tests/run-fail/vars/: call.sk  (+13 more)
tests/run-pass/: assigns.sk  block-tail-if.sk  block-tail-if.stdout  block-tail.sk  block-tail.stdout  comment.sk  comment.stdout  fncall1.sk  hello.sk  hello2.sk  if-else-semi.sk  if-else-semi.stdout  if-expr.sk  if-expr.stdout  if-precidence.sk  if-precidence.stdout  if-ret.sk  if-ret.stdout  if.sk  if.stdout  more-complex-exprs.sk  recurse-countdown.sk  recursive_fib.sk  recursive_fib.stdout  str-comment.sk
tests/runner/: Cargo.toml  results
tests/runner/src/: lib.rs  main.rs
tmp/cursive-tui/: Cargo.toml
(+91 files in other folders)
