[workspace]
resolver = "2"
members = [
    "./cmd/sdb",
    "./cmd/skate",
    "./cmd/skate-treewalk",
    "./playground",
    "./skate/compiler",
    "./skate/diagnostics",
    "./skate/parser",
    "./skate/rt_common",
    "./skate/treewalk",
    "./skate/value",
    "./skate/vm",
    "./tests/runner",
    "./tmp/cursive-tui",
]

exclude = ["ref"]
