[workspace]
resolver = "2"
members = [
    "./cmd/skate-treewalk",
    "./cmd/skate",
    "./cmd/skatrace",
    "./playground",
    "./skate/compiler",
    "./skate/diagnostics",
    "./skate/parser",
    "./skate/rt_common",
    "./skate/treewalk",
    "./skate/value",
    "./skate/vm",
    "./tests/runner",
]
