[package]
name = "playground"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codespan-reporting = "0.11.1"
console_error_panic_hook = "0.1.6"
diagnostics = { path = "../skate/diagnostics" }
skate-treewalk = { path = "../cmd/skate-treewalk" }
termcolor = "1.1.2"
wasm-bindgen = "0.2.74"
