[package]
name = "skate-treewalk"
version = "0.0.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"
description = "A Programing language for rapid iteration"
license = "MIT/Apache-2.0"
repository = "https://github.com/aDotInTheVoid/skate/"

[dependencies]
codespan-reporting = "0.11.1"
diagnostics = { path = "../../skate/diagnostics" }
eyre = "0.6.5"
fs-err = "2.6.0"
parser = { path = "../../skate/parser" }
rt_common = { path = "../../skate/rt_common" }
treewalk = { path = "../../skate/treewalk" }
value = { path = "../../skate/value" }
wasm-bindgen = "0.2.74"

[build-dependencies]
lalrpop = "0.19.5"

