[package]
name = "parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../diagnostics" }
enum-as-inner = "0.3.3"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
serde = { version = "1.0.126", features = ["derive"] }

[build-dependencies]
lalrpop = "0.19.6"
