[package]
name = "runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../../crates/compiler" }
diagnostics = { path = "../../crates/diagnostics" }
parser = { path = "../../crates/parser" }
vm = { path = "../../crates/vm" }
