[package]
name = "trun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.4"
compiler = { path = "../../crates/compiler" }
diagnostics = { path = "../../crates/diagnostics" }
eyre = "0.6.5"
fs-err = "2.6.0"
glob = "0.3.0"
parser = { path = "../../crates/parser" }
structopt = "0.3.22"
vm = { path = "../../crates/vm" }
