[package]
name = "test-runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.4"
compiler = { path = "../../skate/compiler" }
diagnostics = { path = "../../skate/diagnostics" }
eyre = "0.6.5"
fs-err = "2.6.0"
glob = "0.3.0"
parser = { path = "../../skate/parser" }
structopt = "0.3.22"
threadpool = "1.8.1"
vm = { path = "../../skate/vm" }
