[package]
name = "crun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
compiler = { path = "../../../crates/compiler" }
debug2 = "0.1"
diagnostics = { path = "../../../crates/diagnostics" }
eyre = "0.6.5"
fs-err = "2.6.0"
parser = { path = "../../../crates/parser" }
rt_common = { path = "../../../crates/rt_common" }
structopt = "0.3.22"
vm = { path = "../../../crates/vm" }
